1. Header item active script isuue fix. 2.Links to learn more tabs added. 3.minor alignment change in header

--- a/src/main/webapp/css/service.css
+++ b/src/main/webapp/css/service.css
@@ -354,3 +354,8 @@
     color: rgba(220, 27, 133, 0.9) ;
     text-decoration: none;
 }
+
+.HeaderItem *>p{
+    margin: 0;
+    text-align: left;
+}
